clean up old code
Signed-off-by: nxhafa <nxhafa11@gmail.com>